--- a/cpt_training_config.yaml
+++ b/cpt_training_config.yaml
@@ -2,7 +2,7 @@ model:
   base_model: "meta-llama/Llama-3.1-8B"
   instruct_model: "meta-llama/Llama-3.1-8B-Instruct"
   dtype: "bfloat16"
-  load_in_4bit: true
+  load_in_4bit: false
 
 data:
   dataset_name: "Bobby060/us-army-fm-text-cleaned"
