feat: update training configurations for LoRA rank and batch sizes

--- a/supervised-fine-tuning/configs/gemma_sft_training_config.yaml
+++ b/supervised-fine-tuning/configs/gemma_sft_training_config.yaml
@@ -55,4 +55,4 @@ hub:
 # WandB Configuration
 wandb:
   project: "army-fm-sft"
-  run_name: "gemma-7b-us-army-fm-cpt-instruct"
+  run_name: "gemma-7b-army-fm-sft-v3"
